<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:weightSum="7.0"
    tools:context=".dashboard.MainActivity">
    <TextView
        android:id="@+id/bank_name_transaction"
        style="@style/TextAppearance_title"
        android:paddingTop="@dimen/padding_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label_select_transaction"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_select_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/select_transaction"
        android:textColor="@color/colorBackgroundDark"
        android:textSize="@dimen/font_size_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDeposit"
        app:layout_constraintTop_toBottomOf="@id/bank_name_transaction" />

    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_deposit"
        android:textColor="@color/colorWhiteBankName"
        app:layout_constraintBottom_toTopOf="@id/btnTransfer"
        app:layout_constraintEnd_toStartOf="@id/btnWithdraw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_select_transaction" />

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_transfer"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/btnPinChange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnBalanceEnquirey"
        app:layout_constraintTop_toBottomOf="@id/btnDeposit" />


    <Button
        android:id="@+id/btnPinChange"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_pin_change"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/btnOthers"
        app:layout_constraintEnd_toStartOf="@id/btnMini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTransfer" />

    <Button
        android:id="@+id/btnWithdraw"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_withdraw"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/btnBalanceEnquirey"
        app:layout_constraintStart_toEndOf="@id/btnDeposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_select_transaction" />


    <Button
        android:id="@+id/btnBalanceEnquirey"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_balance_enquirey"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/btnMini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/btnTransfer"
        app:layout_constraintTop_toBottomOf="@id/btnWithdraw" />

    <Button
        android:id="@+id/btnMini"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_mini_statement"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/btnCancel_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPinChange"
        app:layout_constraintTop_toBottomOf="@id/btnBalanceEnquirey" />

    <Button
        android:id="@+id/btnOthers"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_250dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_other"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancel_main"
        app:layout_constraintTop_toBottomOf="@id/btnPinChange" />
    <Button
        android:id="@+id/btnCancel_main"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_250dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_cancel"
        app:layout_constraintStart_toEndOf="@id/btnOthers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMini"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>