<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".transfer.TransferActivity">
    <TextView
        android:id="@+id/bank_name_transfer"
        style="@style/TextAppearance_title"
        app:layout_constraintBottom_toTopOf="@id/enter_account_number_to_transfer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_amount_to_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/enter_transfer_amount"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/font_size_15sp"
        app:layout_constraintBottom_toTopOf="@id/transfer_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transfer_account_number_input_layout" />
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/transfer_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_amount_to_transfer"
        app:layout_constraintBottom_toTopOf="@id/buttonTransfer"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:textColorHint="@color/colorBackgroundDark"
        app:hintTextAppearance="@style/text_hint_appearance"
        style="@style/text_input_layout_style"
        android:hint="@string/amount">

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterAmountToTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
            android:maxLength="6"
        android:inputType="number"
        android:textColor="@color/colorBackgroundDark"
            android:textColorHint="@color/colorBackgroundDark"/>
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/enter_account_number_to_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/enter_number_to_transfer"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/font_size_15sp"
            app:layout_constraintBottom_toTopOf="@id/transfer_account_number_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bank_name_transfer" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/transfer_account_number_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_account_number_to_transfer"
        app:layout_constraintBottom_toTopOf="@id/enter_amount_to_transfer"
        android:layout_margin="@dimen/margin_16dp"
        android:textColorHint="@color/colorBackgroundDark"
        app:hintTextAppearance="@style/text_hint_appearance"
        style="@style/text_input_layout_style"
        android:hint="@string/account_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterAccountNumberToTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="16"
            android:textColor="@color/colorBackgroundDark"
            android:textColorHint="@color/colorBackgroundDark"/>
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/currentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/transfer_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_amount_to_transfer" />





    <Button
        android:id="@+id/buttonTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_114dp"
        android:layout_marginLeft="@dimen/margin_114dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_114dp"
        android:layout_marginRight="@dimen/margin_114dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_submit"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/buttonBackToMainPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transfer_input_layout" />
    <Button
        android:id="@+id/buttonBackToMainPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_90dp"
        android:layout_marginLeft="@dimen/margin_90dp"
        android:layout_marginEnd="@dimen/margin_90dp"
        android:layout_marginRight="@dimen/margin_90dp"
        android:layout_marginBottom="@dimen/margin_2dp"
        android:background="@drawable/round_corners"
        android:text="@string/back_to_main_page"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonTransfer" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>