<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
   <androidx.constraintlayout.widget.ConstraintLayout
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/colorAccent"
   tools:context=".others.OthersActivity">
    <TextView
        android:id="@+id/bank_name_phone_number_change"
        style="@style/TextAppearance_title"
        app:layout_constraintBottom_toTopOf="@id/enter_phone_number_to_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_phone_number_to_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/enter_new_phone_number"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/font_size_20sp"
        app:layout_constraintBottom_toTopOf="@id/phone_number_change_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_name_phone_number_change" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_change_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_phone_number_to_change"
        app:layout_constraintBottom_toTopOf="@id/buttonPhoneNumberChange"
        android:layout_margin="@dimen/margin_16dp"
        android:textColorHint="@color/colorBackgroundDark"
        app:hintTextAppearance="@style/text_hint_appearance"
        style="@style/text_input_layout_style"
        android:hint="@string/new_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPhoneNumberChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textColorHint="@color/colorBackgroundDark"
            android:textColor="@color/colorBackgroundDark"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonPhoneNumberChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_114dp"
        android:layout_marginLeft="@dimen/margin_114dp"
        android:layout_marginEnd="@dimen/margin_114dp"
        android:layout_marginRight="@dimen/margin_114dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_submit"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@id/buttonCancelPhoneNumberChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_change_input_layout" />
    <Button
        android:id="@+id/buttonCancelPhoneNumberChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_114dp"
        android:layout_marginLeft="@dimen/margin_114dp"
        android:layout_marginEnd="@dimen/margin_114dp"
        android:layout_marginRight="@dimen/margin_114dp"
        android:background="@drawable/round_corners"
        android:text="@string/text_button_cancel"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPhoneNumberChange" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>